[gd_scene load_steps=19 format=2]

[ext_resource path="res://import/img/restart_frame_texture.png" type="Texture" id=1]
[ext_resource path="res://scn/player/player.tscn" type="PackedScene" id=2]
[ext_resource path="res://scn/road/road.tscn" type="PackedScene" id=3]
[ext_resource path="res://import/img/Panorama.png" type="Texture" id=4]
[ext_resource path="res://scn/main/road_spawner.gd" type="Script" id=5]
[ext_resource path="res://import/texture/road_texture.png" type="Texture" id=6]
[ext_resource path="res://scn/main/main.gd" type="Script" id=7]
[ext_resource path="res://scn/road/finish.tscn" type="PackedScene" id=8]
[ext_resource path="res://materials/fonts/font.tres" type="DynamicFont" id=9]

[sub_resource type="CapsuleShape" id=7]
radius = 0.209218
height = 0.229854

[sub_resource type="PanoramaSky" id=1]
panorama = ExtResource( 4 )

[sub_resource type="Environment" id=2]
background_mode = 2
background_sky = SubResource( 1 )
background_sky_orientation = Basis( -0.695386, 0, 0.718636, 0, 1, 0, -0.718636, 0, -0.695386 )
ambient_light_color = Color( 0.898039, 0.843137, 0.843137, 0.447059 )
ambient_light_sky_contribution = 0.0

[sub_resource type="BoxShape" id=3]

[sub_resource type="CubeMesh" id=4]

[sub_resource type="SpatialMaterial" id=5]
albedo_texture = ExtResource( 6 )
uv1_scale = Vector3( 1.053, 0.5, 0.5 )
uv1_triplanar = true

[sub_resource type="BoxShape" id=6]
extents = Vector3( 1, 1.7465, 1 )

[sub_resource type="CubeMesh" id=8]

[sub_resource type="SpatialMaterial" id=9]
albedo_texture = ExtResource( 6 )
uv1_scale = Vector3( 1.053, 0.5, 0.5 )
uv1_triplanar = true

[node name="main" type="Spatial"]
script = ExtResource( 7 )

[node name="player" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0186095, 3.56068 )

[node name="player_area" type="Area" parent="player"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.323947, 0 )

[node name="CollisionShape" type="CollisionShape" parent="player/player_area"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 7 )

[node name="InterpolatedCamera" type="InterpolatedCamera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.10331, 2.99288 )
current = true
fov = 49.5
target = NodePath("../target_cam")
speed = 2.0
enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 2 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, 0.896177, 0.443697, 0, -0.443697, 0.896177, 0, 3.75004, 4.27422 )

[node name="StaticBody" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 2, 0, -1, 2 )

[node name="CollisionShape" type="CollisionShape" parent="StaticBody"]
shape = SubResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="StaticBody/CollisionShape"]
transform = Transform( 3.27414, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
mesh = SubResource( 4 )
material/0 = SubResource( 5 )

[node name="CollisionShape2" type="CollisionShape" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.00696, 0.718661, 0 )
shape = SubResource( 6 )

[node name="CollisionShape3" type="CollisionShape" parent="StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.99776, 0.718661, 0 )
shape = SubResource( 6 )

[node name="MeshInstance2" type="MeshInstance" parent="StaticBody"]
transform = Transform( 2.60607, -0.476683, 0, 1.41315, 0.879075, 0, 0, 0, 1, 2.59066, 0, 0 )
mesh = SubResource( 8 )
skeleton = NodePath("../CollisionShape")
material/0 = SubResource( 9 )

[node name="MeshInstance3" type="MeshInstance" parent="StaticBody"]
transform = Transform( 2.68998, 0.420307, 0, -1.24602, 0.907382, 0, 0, 0, 1, -3.24117, 0, 0 )
mesh = SubResource( 8 )
skeleton = NodePath("../CollisionShape")
material/0 = SubResource( 9 )

[node name="road_spawner" type="Spatial" parent="."]
script = ExtResource( 5 )
road_scene = ExtResource( 3 )
finish_scene = ExtResource( 8 )

[node name="target_cam" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.959601, 0.281365, 0, -0.281365, 0.959601, 0, 1.68294, 6.39486 )

[node name="Control" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer" type="MarginContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 30.0
margin_right = -30.0
margin_bottom = -30.0

[node name="ColorRect" type="TextureRect" parent="Control/MarginContainer"]
margin_right = 964.0
margin_bottom = 579.0
texture = ExtResource( 1 )
stretch_mode = 4

[node name="CenterContainer" type="CenterContainer" parent="Control/MarginContainer"]
margin_right = 964.0
margin_bottom = 579.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer/CenterContainer"]
margin_left = 384.0
margin_top = 248.0
margin_right = 579.0
margin_bottom = 330.0

[node name="Label" type="Label" parent="Control/MarginContainer/CenterContainer/VBoxContainer"]
margin_right = 195.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 9 )
text = "Your score: "

[node name="restart_button" type="Button" parent="Control/MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 40.0
margin_right = 195.0
margin_bottom = 82.0
custom_fonts/font = ExtResource( 9 )
text = "Restart"

[node name="Button" type="Button" parent="."]
margin_right = 12.0
margin_bottom = 20.0

[connection signal="area_entered" from="player/player_area" to="." method="_on_player_area_area_entered"]
[connection signal="pressed" from="Control/MarginContainer/CenterContainer/VBoxContainer/restart_button" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
